--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ button.choice:hover {
 }
 
 /* bloque accueil et resultat */
-#accueil, #resultat {
+#accueil {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,10 +90,63 @@ button.choice:hover {
     text-align: center;
 }
 
+/* bloque resultat */
+
+#resultat {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    text-align: center;
+}
+
 /* input nom utilisateur */
 .name {
     width: 53%;
     margin: 10px 5px;
     padding: 10px;
     border-radius: 5px;
+}
+
+/* classement global */
+#global-classement {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px 0;
+}
+
+/* classement secondaire */
+#clasement-personnel, #classement-generale {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    width: 50%;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 5px;
+}
+
+.titre {
+    margin: 0;
+}
+
+.affiche_score {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.nom, .score {
+    width: 50%;
+    text-align: center;
 }
